2008-04-04  Justin Cherniak <justin.cherniak@gmail.com> 	* DecoderStream.cs: 		- Refactored Height and Width to VideoDecoderStream 		- Refactoring and comment updates 	* AVCodec.cs: Added additional overload to avcodec_decode_video to 	allow AVFrame* to be utilized 	* AVFrame.cs: Noted x64 portability issues with 	BrokenPointerAttribute, added conversions to and from AVPicture 	* AVPicture.cs: Noted x64 portability issues with [BrokenPointer] 	* BrokenPointer.cs: Attribute added to mark portability issues to x64 	(need to deal with lack of fixed IntPtr arrays in a later release) 	* SWSContext.cs: Added missing fields from avcodec.h, now works 	properly 	* VideoDecoderStream.cs: 		- Moved to FFmpegSharp.Video namespace 		- Replace IntPtr AVFrame with AVFrame* 		- Utilized fixed SWScale instead of img_convert 		- Moved Width and Height properties from DecoderStream.cs 		- Fixed documentation 		- Eliminated bad try/catch block in destructor

--- a/ffmpeg-sharp/src/FFmpegSharp.csproj
+++ b/ffmpeg-sharp/src/FFmpegSharp.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{09066EC3-71AD-42AD-B403-E8917B47021D}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -53,6 +53,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
@@ -175,6 +176,7 @@
     <Compile Include="Interop\AVIO\URLProtocol.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Interop\BrokenPointer.cs" />
     <Compile Include="Interop\SWScale\SwsContext.cs" />
     <Compile Include="Interop\SWScale\SwsFilter.cs" />
     <Compile Include="Interop\SWScale\SwsVector.cs" />
@@ -207,6 +209,9 @@
     <Compile Include="Video\VideoDecoderStream.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\ChangeLog">
+      <Link>ChangeLog</Link>
+    </None>
     <None Include="FFmpegSharp.snk" />
   </ItemGroup>
   <ItemGroup>
